# hs-backend-demo

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/: __init__.py
src/application/services/: auth_service.py
src/domain/: constants.py  exceptions.py
src/domain/interfaces/: hubspot.py  repository.py
src/domain/services/: verification.py
src/domain/types/: hubspot.py
src/infrastructure/: config.py
src/infrastructure/hubspot/: auth.py  company_service.py  contact_service.py  types.py
src/infrastructure/repositories/: file_repository.py
src/presentation/: api.py  dependencies.py
src/presentation/middleware/: hubspot_verification.py
src/presentation/routers/: __init__.py  auth.py  contacts.py
src/presentation/templates/: error.html  success.html
tests/application/services/: test_auth_service.py
tests/domain/: test_exceptions.py
tests/domain/interfaces/: test_hubspot.py
tests/domain/services/: test_verification.py
tests/domain/types/: test_hubspot_types.py
tests/infrastructure/repositories/: test_file_repository.py
tests/presentation/: test_api.py
